--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -412,6 +412,7 @@ services:
     networks:
       - ssrf_proxy_network
       - default
+      - shared_network
 
   # worker service
   # The Celery worker for processing the queue.
@@ -435,6 +436,7 @@ services:
     networks:
       - ssrf_proxy_network
       - default
+      - shared_network
 
   # Frontend web application.
   web:
@@ -508,6 +510,7 @@ services:
       test: [ 'CMD', 'curl', '-f', 'http://localhost:8194/health' ]
     networks:
       - ssrf_proxy_network
+      - shared_network
 
   # ssrf_proxy server
   # for more information, please refer to
@@ -529,6 +532,7 @@ services:
     networks:
       - ssrf_proxy_network
       - default
+      - shared_network
 
   # Certbot service
   # use `docker-compose --profile certbot up` to start the certbot service.
@@ -779,6 +783,7 @@ services:
       retries: 3
     networks:
       - milvus
+      - shared_network
 
   minio:
     container_name: milvus-minio
@@ -798,6 +803,7 @@ services:
       retries: 3
     networks:
       - milvus
+      - shared_network
 
   milvus-standalone:
     container_name: milvus-standalone
@@ -825,6 +831,7 @@ services:
       - 9091:9091
     networks:
       - milvus
+      - shared_network
 
   # Opensearch vector database
   opensearch:
@@ -848,6 +855,7 @@ services:
       - ./volumes/opensearch/data:/usr/share/opensearch/data
     networks:
       - opensearch-net
+      - shared_network
 
   opensearch-dashboards:
     container_name: opensearch-dashboards
@@ -860,6 +868,7 @@ services:
       - ./volumes/opensearch/opensearch_dashboards.yml:/usr/share/opensearch-dashboards/config/opensearch_dashboards.yml
     networks:
       - opensearch-net
+      - shared_network
     depends_on:
       - opensearch
 
@@ -961,6 +970,8 @@ networks:
   opensearch-net:
     driver: bridge
     internal: true
+  shared_network:
+      external: true    
 
 volumes:
   oradata:
